# HitCounter

./: .editorconfig  .env.example  .gitignore  Dockerfile  README.md  app.py  bench.py  hitcount_file.py  pyproject.toml  requirements.txt  routes.py  simple.py
.github/workflows/: tests.yml
data/: README.md
font/: seven-segment.pbm  seven-segment.pil
hitcounter/: __init__.py  hitcountfile.py  routes.py
hitcounter/templates/: base.html.j2
hitcounter/tests/: conftest.py  test_bench.py  test_files.py  test_routes.py
templates/: base.html
